# vigilant-engine

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Ground Station.md  README.md  flash.py  index.html  mkdocs.yml  package-lock.json  partitions.csv  pyproject.toml  pytest_http_server_simple.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  search.html
.github/workflows/: ci.yml  clang-format.yaml  docs.yml  esp-build.yml  pre-commit.yaml  ruff.yaml
.obsidian/: workspace.json
build-flash/: index.html
components/vigilant_engine/: CMakeLists.txt  idf_component.yml
components/vigilant_engine/include/: http_server.h  i2c.h  master.h  ota_http.h  pipeline.h  status_led.h  vigilant.h  vigilant_i2c_device.h  websocket.h
components/vigilant_engine/src/: http_server.c  i2c.c  master.c  ota_http.c  pipeline.c  status_led.c  vigilant.c  websocket.c
components/vigilant_engine/static/: vigilant.html
components/vigilant_engine/test/: test_vigilant_engine.c
config/: index.html
docs/: build-flash.md  config.md  features.md  flash-helper.md  getting-started.md  i2c-interface.md  index.md  partitions.md  peripherals.md  project-layout.md  recovery-ota.md  troubleshooting.md  wifi-master.md
features/: index.html
flash-helper/: index.html
getting-started/: index.html
i2c-interface/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  http_server.h  main.c  message.h  narrowband.cpp  narrowband.h  ota_http.c  vigilant.c  websocket.c  ws_mgr.c  ws_mgr.h
main/static/: vigilant.html
partitions/: index.html
peripherals/: index.html
project-layout/: index.html
recovery-ota/: index.html
search/: search_index.json
troubleshooting/: index.html
vigilant-engine-frontend/: index.html  package-lock.json  package.json  vigilant.html  vite.config.js
vigilant-engine-frontend/src/recovery/: RecoveryApp.vue  main.js
vigilant-engine-frontend/src/shared/styles/: theme.css
vigilant-engine-frontend/src/vigilant/: VigilantApp.vue  main.js
vigilant-engine-recovery/: CMakeLists.txt  pytest_hello_world.py  sdkconfigs.default
vigilant-engine-recovery/main/: CMakeLists.txt  recovery_app.c
vigilant-engine-recovery/main/static/: index.html
